# logicshell

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  LLM_GUIDE.md  PLAN.md  README.md  tarpaulin.toml
.github/workflows/: ci.yml
logicshell-core/: Cargo.toml
logicshell-core/examples/: demo.rs
logicshell-core/src/: audit.rs  dispatcher.rs  error.rs  hooks.rs  lib.rs  safety.rs
logicshell-core/src/config/: discovery.rs  mod.rs  schema.rs
logicshell-core/tests/: dispatcher_integration.rs  e2e.rs  hooks_audit_integration.rs
logicshell-llm/: Cargo.toml
logicshell-llm/examples/: phase10.rs  phase8.rs  phase9.rs
logicshell-llm/src/: bridge.rs  client.rs  context.rs  error.rs  lib.rs  ollama.rs  parser.rs  prompt.rs  proposed.rs
logicshell-llm/src/templates/: assist_on_127.txt  nl_to_command.txt
logicshell-llm/tests/: phase10_integration.rs  phase8_integration.rs  phase9_integration.rs
logicshell-tui/: Cargo.toml
logicshell-tui/examples/: phase11.rs  phase12.rs  phase13.rs
logicshell-tui/src/: app.rs  error.rs  event.rs  history.rs  input.rs  lib.rs  output.rs  terminal.rs  ui.rs
logicshell-tui/tests/: phase11_integration.rs  phase12_integration.rs  phase13_integration.rs
