[package]
name = "logicshell-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "LogicShell core: dispatcher, config, safety, audit, hooks"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
mockall = { workspace = true }
tempfile = { workspace = true }
